--- a/app/src/main/res/values-2240x1440/dimens.xml
+++ b/app/src/main/res/values-2240x1440/dimens.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!--所有边距-->
-    <dimen name="size_all_pading">38.0px</dimen>
-    <!--所有标题大小-->
-    <dimen name="size_all_title_size">95.0px</dimen>
+    <!--顶部 - 右标题的 大小-->
+    <dimen name="size_appbar_right_text_size">68.39999999999999px</dimen>
+    <!--顶部 - 中间标题的 大小-->
+    <dimen name="size_appbar_center_text_size">76.0px</dimen>
 
-    <!--上边距-->
-    <dimen name="size_login_op_m_t">152.0px</dimen>
-    <!--输入框边距-->
-    <dimen name="size_login_op_et_t">57.0px</dimen>
-    <!--文字边距-->
-    <dimen name="size_login_op_text_t">19.0px</dimen>
+    <!--所有按钮文字大小-->
+    <dimen name="size_all_button_text_size">68.39999999999999px</dimen>
+    <!--所有输入框高度-->
+    <dimen name="size_all_et_height">190.0px</dimen>
+    <!--所有分割线高度-->
+    <dimen name="size_all_line_height">1.9px</dimen>
 
+    <!--登录 - 上边距 -->
+    <dimen name="size_login_top_pading">38.0px</dimen>
+    <!--登录 - 按钮边距 -->
+    <dimen name="size_login_button_top_pading">95.0px</dimen>
 
 </resources>
 
