--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#4a90e2</color>
+    <color name="colorPrimaryDark">#4a90e2</color>
     <color name="colorAccent">#D81B60</color>
 
     <color name="color_white">@android:color/white</color>
     <color name="color_black">@android:color/black</color>
+
+    <color name="color_gary">#999999</color>
 
 </resources>
