--- a/app/src/main/res/layout/includ_title_right_bar.xml
+++ b/app/src/main/res/layout/includ_title_right_bar.xml
@@ -23,30 +23,25 @@
         </RelativeLayout>
 
         <TextView
-            android:textSize="@dimen/size_appbar_center_text_size"
             android:id="@+id/include_title_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textColor="@color/color_white" />
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/size_appbar_center_text_size" />
 
-        <RelativeLayout
-            android:layout_alignParentRight="true"
-            android:id="@+id/include_title_right_text"
+
+        <TextView
+            android:id="@+id/title_right_text"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="15dp"
+            android:gravity="center"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/size_appbar_right_text_size" />
 
-            <TextView
-                android:textSize="@dimen/size_appbar_right_text_size"
-                android:id="@+id/title_right_text"
-                android:gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="15dp"
-                android:textColor="@color/color_white" />
-
-        </RelativeLayout>
 
     </RelativeLayout>
 
