--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,11 +12,27 @@
     <dimen name="size_all_et_height">100px</dimen>
     <!--所有分割线高度-->
     <dimen name="size_all_line_height">1px</dimen>
+    <!--所有提示框高-->
+    <dimen name="size_login_dialog_height">300px</dimen>
+    <!--所有提示框宽-->
+    <dimen name="size_login_dialog_width">600px</dimen>
 
     <!--登录 - 上边距 -->
     <dimen name="size_login_top_pading">20px</dimen>
     <!--登录 - 按钮边距 -->
     <dimen name="size_login_button_top_pading">50px</dimen>
+    <!--登录 - 提示框Item -->
+    <dimen name="size_login_login_item_height">100px</dimen>
+
+    <!--我 - 头像Item高度-->
+    <dimen name="size_me_item_height">200px</dimen>
+    <!--我 - 头像高宽-->
+    <dimen name="size_me_photo_height">160px</dimen>
+    <!--我 - 上边距 -->
+    <dimen name="size_me_top_pading">20px</dimen>
+
+    <!--编辑用户 - 上边距 -->
+    <dimen name="size_user_edit_top_pading">20px</dimen>
 
 </resources>
 
