--- a/app/src/main/res/layout/activity_user_edit.xml
+++ b/app/src/main/res/layout/activity_user_edit.xml
@@ -45,11 +45,19 @@
 
         </LinearLayout>
 
+        <!--个性签名-->
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_me_desc_height"
+            android:layout_margin="10dp"
+            android:background="@color/color_white"
+            android:lines="2"
+            android:textColor="@color/color_black" />
+
         <!--昵称-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_all_et_height"
-            android:layout_marginTop="@dimen/size_user_edit_top_pading"
             android:background="@color/color_white"
             android:gravity="center_vertical"
             android:orientation="horizontal"
@@ -102,12 +110,12 @@
                 android:textColor="@color/color_black" />
 
             <EditText
-                android:focusable="false"
                 android:id="@+id/et_sex"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
+                android:focusable="false"
                 android:gravity="right|center_vertical"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp" />
@@ -142,13 +150,13 @@
                 android:textColor="@color/color_black" />
 
             <EditText
-                android:inputType="number"
                 android:id="@+id/et_age"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right|center_vertical"
+                android:inputType="number"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp" />
 
@@ -167,6 +175,7 @@
 
         <!--生日-->
         <LinearLayout
+            android:id="@+id/ll_birthday"
             android:layout_width="match_parent"
             android:layout_height="@dimen/size_all_et_height"
             android:background="@color/color_white"
@@ -221,13 +230,54 @@
                 android:textColor="@color/color_black" />
 
             <EditText
-                android:inputType="number"
                 android:id="@+id/et_phone"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="right|center_vertical"
+                android:inputType="number"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_user_arrow" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_all_line_height"
+            android:alpha="0.2"
+            android:background="@color/color_gary" />
+
+        <!--城市-->
+        <LinearLayout
+            android:id="@+id/ll_city"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/size_all_et_height"
+            android:background="@color/color_white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_user_edit_city"
+                android:textColor="@color/color_black" />
+
+            <EditText
+                android:id="@+id/et_city"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@null"
+                android:gravity="right|center_vertical"
+                android:inputType="number"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp" />
 
