--- a/app/src/main/res/values-2560x1440/dimens.xml
+++ b/app/src/main/res/values-2560x1440/dimens.xml
@@ -31,7 +31,11 @@
     <!--我 - 上边距 -->
     <dimen name="size_me_top_pading">40.0px</dimen>
     <!--我 - 姓名大小 -->
-    <dimen name="size_me_name_text_size">60.0px</dimen>
+    <dimen name="size_me_name_text_size">100.0px</dimen>
+    <!--我 - 姓名大小 -->
+    <dimen name="size_me_name_account_size">60.0px</dimen>
+    <!--我 - 备注高度 -->
+    <dimen name="size_me_desc_height">300.0px</dimen>
 
     <!--编辑用户 - 上边距 -->
     <dimen name="size_user_edit_top_pading">40.0px</dimen>
