--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,6 +34,8 @@
     <dimen name="size_me_name_text_size">50px</dimen>
     <!--我 - 姓名大小 -->
     <dimen name="size_me_name_account_size">30px</dimen>
+    <!--我 - 备注高度 -->
+    <dimen name="size_me_desc_height">150px</dimen>
 
     <!--编辑用户 - 上边距 -->
     <dimen name="size_user_edit_top_pading">20px</dimen>
